<resources>
    <!-- Google Maps API Key -->
    <string name="map_api_key">AIzaSyCeULOnxNwDi2sKBH-Fv7WKV4TERDF-qnw</string>


    <!--Activities-->
    <string name="app_name">PosiTime</string>
    <string name="register_activity">Registration</string>
    <string name="profile_activity">Profile</string>
    <string name="workplace_activity">Workplaces</string>
    <string name="workplace_edit_activity">Edit Workplace</string>
    <string name="workplace_add_activity">Create Workplace</string>
    <string name="dashboard_activity">Dashboard</string>
    <string name="underwork_activity">Under development</string>

    <!-- Inputs  -->
    <string name="emailInput">Email Address</string>
    <string name="passwordInput">Password</string>
    <string name="passwordConfirm">Password Confirmation</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="workplace_name">Workplace Title</string>
    <string name="workplace_chef_ffname">Chef Firstname</string>
    <string name="workplace_chef_llname">Chef Lastname</string>
    <string name="workplace_weeklyHours">Weekly Hours</string>
    <string name="workplace_curreny">Currency</string>
    <string name="workplace_moneyPerHour">Money per Hour</string>
    <string name="workplace_currency_radio1">€</string>
    <string name="workplace_currency_radio2">$</string>
    <string name="workplace_title_positionSelection">Select Position</string>
    <string name="workplace_btn_save">Save</string>
    <string name="workplace_radius">Radius (in Meters)</string>


    <!-- TextView's -->
    <string name="registerText">No account yet? Create one!</string>
    <string name="not_finished">This activity is still under development. Come back another time.</string>

    <!-- Buttons -->
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>


    <!-- Toasts -->
    <string name="wrongEmail">Please use a correct email</string>
    <string name="noPasswordMatch">Passwords do not match</string>
    <string name="notAllFields">Not all fields have been filled</string>
    <string name="workplace_created">Workplace created</string>
    <string name="workplace_updated">Workplace updated</string>
    <string name="workplace_deleted">Workplace deleted</string>

    <!-- AlertDialog Workplace -->
    <string name="workplace_delete_title">Delete Workplace</string>
    <string name="workplace_delete_message">Do you really want to delete the workplace? If you select yes all data to the workplace will be deleted</string>

    <!-- System Configuation -->
    <string name="title_activity_navigation_activity">navigation_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_workplace">Workplace</string>
    <string name="title_activity_workplace_add_edit">Workplace_add_edit</string>
    <string name="title_activity_workplace_add_delete">workplace_add_delete</string>
    <string name="id_test" />

    <string name="day_options">Options</string>
    <string name="starttime" />
    <string name="endtime" />
    <string name="time_sum" />
</resources>
