<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:padding="2dp"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currDate"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:padding="25sp"
            android:text="" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endtime" />

        <TextView
            android:id="@+id/sumTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_sum" />

        <Button
            android:id="@+id/button_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onClick"
            android:text="Ok" />

    </LinearLayout>

</RelativeLayout>